kubernetes/time_service_all_in_one.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "time_service"
  name: "ballerina-time-service"
  ownerReferences: []
spec:
  externalIPs: []
  loadBalancerSourceRanges: []
  ports:
  - port: 9095
    name: "http"
    targetPort: 9095
  selector:
    app: "time_service"
  type: "NodePort"
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "time_service"
  name: "ballerina-time-service"
  ownerReferences: []
spec:
  replicas: 1
  template:
    metadata:
      annotations: {}
      finalizers: []
      labels:
        app: "time_service"
      ownerReferences: []
    spec:
      containers:
      - args: []
        command: []
        env: []
        envFrom: []
        image: "ballerina-time-service"
        imagePullPolicy: "IfNotPresent"
        name: "ballerina-time-service"
        ports:
        - containerPort: 9095
          protocol: "TCP"
        volumeMounts: []
      hostAliases: []
      imagePullSecrets: []
      initContainers: []
      nodeSelector: {}
      tolerations: []
      volumes: []
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  annotations:
    kubernetes.io/ingress.class: "istio"
  finalizers: []
  labels:
    app: "time_service"
  name: "ballerina-time-service"
  ownerReferences: []
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: "ballerina-time-service"
          servicePort: 9095
        path: "/localtime"
